# minotaur

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
src/algorithms/: CMakeLists.txt
src/engines/Ipopt/: CMakeLists.txt  IpoptEngine.cpp
src/engines/OsiLP/: CMakeLists.txt  OsiLPEngine.cpp
src/interfaces/ampl/: CMakeLists.txt
src/testing/: CMakeLists.txt
